<resources>
    <item name="visible" type="id"/>
    <item name="masked" type="id"/>
    <string name="app_name">Exam Groups</string>
    <string name="sign_in_text">Sign in</string>
    <string name="sign_up_text">Sign up</string>
    <string name="topic_title_text">Tema generico</string>
    <string name="exam_topics_text">Topic</string>
    <string name="button_new_exam_name">New\nexam</string>
    <string name="button_your_exams">Your\nexams</string>
    <string name="button_old_exams">Old exams</string>
    <string name="button_topics">Topics</string>
    <string name="button_create_topics">New\ntopic</string>
    <string name="button_register_screen">Do not have an account yet? Sing up!</string>
    <string name="button_view_topics">View topics</string>
    <string name="button_edit_topic">Edit</string>
    <string name="button_create_exam">Create exam</string>
    <string name="button_invite">Invite</string>
    <string name="button_invite_by_name">Invite by name</string>
    <string name="button_create_topic">Create topic</string>
    <string name="button_set_as_complete">Set as completed</string>
    <string name="add_friend">Add friend</string>
    <string name="textiet_username">\u0020\u0020Username</string>
    <string name="textiet_password">\u0020\u0020Password</string>
    <string name="textiet_email">\u0020\u0020Email</string>
    <string name="textiet_email_label">Email</string>
    <string name="textiet_repeat_password">\u0020\u0020Repeat password</string>
    <string name="textiet_new_topic">\u0020\u0020New topic</string>
    <string name="label_exam_name">Name:</string>
    <string name="label_exam_date">Date:</string>
    <string name="label_exam_classrooms">Classroom/s:</string>
    <string name="label_exam_percentage">Value:</string>
    <string name="label_exam_description">Description:</string>
    <string name="label_username">Username:</string>
    <string name="label_current_exams">Current exams:</string>
    <string name="label_total_participations">Total participations:</string>
    <string name="label_email">Email:</string>
    <string name="empty_text">Example</string>
    <string name="settings_menu_text">Settings</string>
    <string name="profile_menu_text">Profile</string>
    <string name="logout_menu_text">Log\u0020out</string>
    <string name="friends_menu_text">Friend\u0020list</string>
    <string name="text_hint">Empty</string>
    <string name="name_hint">\u0020\u0020 Name</string>
    <string name="date_hint">\u0020\u0020Date</string>
    <string name="class_hint">\u0020\u0020Classroom/s</string>
    <string name="value_hint">\u0020\u0020Value</string>
    <string name="description_hint">\u0020\u0020Description</string>
</resources>
