<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/your_exams_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="170dp"
        android:layout_height="190dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/button_your_exams"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/topics_button"
        app:layout_constraintEnd_toStartOf="@+id/new_exam_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/new_exam_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="170dp"
        android:layout_height="190dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/button_new_exam_name"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/new_topic_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/your_exams_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/topics_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="173dp"
        android:layout_height="190dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="13dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/button_topics"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/old_exams_button"
        app:layout_constraintEnd_toStartOf="@+id/new_topic_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/your_exams_button" />

    <Button
        android:id="@+id/new_topic_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="170dp"
        android:layout_height="190dp"
        android:layout_marginBottom="103dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/button_create_topics"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/topics_button"
        app:layout_constraintTop_toBottomOf="@+id/new_exam_button" />

    <Button
        android:id="@+id/old_exams_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginBottom="34dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/button_old_exams"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topics_button" />
</android.support.constraint.ConstraintLayout>