<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/total_participations_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="233dp"
        android:layout_marginStart="8dp"
        android:text="@string/label_total_participations"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_exams_textView" />

    <TextView
        android:id="@+id/total_participations_textView"
        android:layout_width="138dp"
        android:layout_height="28dp"
        android:layout_marginBottom="233dp"
        android:layout_marginStart="8dp"
        android:text="@string/empty_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/total_participations_label"
        app:layout_constraintTop_toBottomOf="@+id/profile_imageView" />

    <TextView
        android:id="@+id/current_exams_textView"
        android:layout_width="95dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="204dp"
        android:text="@string/empty_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/total_participations_label"
        app:layout_constraintStart_toEndOf="@+id/current_exams_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/current_exams_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="8dp"
        android:text="@string/label_current_exams"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/total_participations_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_textView" />

    <TextView
        android:id="@+id/username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:layout_marginStart="13dp"
        android:text="@string/label_username"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/username_textView"
        app:layout_constraintEnd_toStartOf="@+id/username_textView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/username_textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="38dp"
        android:layout_marginTop="160dp"
        android:text="@string/empty_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/current_exams_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/username_label"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile_imageView"
        android:layout_width="129dp"
        android:layout_height="0dp"
        android:layout_marginBottom="111dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="21dp"
        app:layout_constraintBottom_toTopOf="@+id/total_participations_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/add_friend_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_friend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_participations_label"
        app:layout_constraintVertical_bias="0.26" />
</android.support.constraint.ConstraintLayout>