<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/exam_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:text="@string/label_exam_name"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/exam_date_label"
        app:layout_constraintEnd_toStartOf="@+id/exam_name_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/exam_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="24dp"
        android:text="@string/label_exam_date"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/exam_percentage_label"
        app:layout_constraintEnd_toStartOf="@+id/exam_date_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exam_name_label" />

    <TextView
        android:id="@+id/exam_percentage_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="115dp"
        android:layout_marginEnd="19dp"
        android:layout_marginStart="24dp"
        android:text="@string/label_exam_percentage"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/exam_description_textView"
        app:layout_constraintEnd_toStartOf="@+id/exam_value_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exam_date_label" />

    <TextView
        android:id="@+id/exam_classrooms_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:layout_marginEnd="19dp"
        android:layout_marginStart="24dp"
        android:text="@string/label_exam_classrooms"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/exam_description_label"
        app:layout_constraintEnd_toStartOf="@+id/exam_classroom_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exam_value_textView" />

    <TextView
        android:id="@+id/exam_description_label"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="19dp"
        android:layout_marginEnd="1dp"
        android:text="@string/label_exam_description"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/exam_description_textView"
        app:layout_constraintEnd_toEndOf="@+id/exam_classrooms_label"
        app:layout_constraintStart_toStartOf="@+id/exam_description_textView"
        app:layout_constraintTop_toBottomOf="@+id/exam_classrooms_label" />

    <Button
        android:id="@+id/view_topics_button"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@color/colorPrimary"
        android:text="@string/button_view_topics"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exam_description_textView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/exam_name_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:layout_marginTop="30dp"
        android:text="@string/empty_text"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/exam_date_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/exam_name_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/exam_date_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="16dp"
        android:text="@string/empty_text"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/exam_value_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/exam_date_label"
        app:layout_constraintTop_toBottomOf="@+id/exam_name_textView" />

    <TextView
        android:id="@+id/exam_value_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="16dp"
        android:text="@string/empty_text"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/exam_classrooms_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/exam_percentage_label"
        app:layout_constraintTop_toBottomOf="@+id/exam_date_textView" />

    <TextView
        android:id="@+id/exam_classroom_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/empty_text"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/exam_classrooms_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/exam_classrooms_label" />

    <TextView
        android:id="@+id/exam_description_textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="122dp"
        android:layout_marginEnd="23dp"
        android:layout_marginStart="23dp"
        android:text="@string/empty_text"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exam_percentage_label" />
</android.support.constraint.ConstraintLayout>