<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alex.examgroups.LoginActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username_til"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="9dp"
        android:layout_marginEnd="23dp"
        android:layout_marginStart="23dp"
        app:layout_constraintBottom_toTopOf="@+id/password_til"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_textView">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/username_textiet"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:background="@android:color/background_light"
            android:hint="@string/textiet_username" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_til"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="23dp"
        android:layout_marginStart="23dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_til">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password_textiet"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:background="@android:color/background_light"
            android:hint="@string/textiet_password" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/sign_in_textView"
        android:layout_width="146dp"
        android:layout_height="0dp"
        android:layout_marginBottom="13dp"
        android:layout_marginTop="94dp"
        android:text="@string/sign_in_text"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/username_til"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="151dp"
        android:background="@android:drawable/button_onoff_indicator_on"
        android:text="@string/sign_in_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_til" />

    <Button
        android:id="@+id/register_screen_button"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:text="@string/button_register_screen"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />
</android.support.constraint.ConstraintLayout>
